...
                
                ToolbarItem(placement: .status) { // '.status': en la parte de abajo
                    
                    Button(
                        action: { self.showNewNote.toggle() },
                        label:  {
                        Label ("Crear nota", systemImage: "square.and.pencil")
                            .labelStyle(TitleAndIconLabelStyle()) // decirle que quieres que salga de la label
                        } )
                    .buttonStyle(.bordered)
                    .tint(.blue)
                    .bold()
                    
...
